--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env REACT_APP_NODE_ENV=development react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "build:test":"cross-env REACT_APP_NODE_ENV=test react-scripts build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -37,6 +40,7 @@
   },
   "devDependencies": {
     "antd": "^4.16.0",
-    "node-sass": "^6.0.1"
+    "node-sass": "^6.0.1",
+    "react-router": "^5.2.1"
   }
 }
