--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "i18next": "^21.6.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "cross-env REACT_APP_NODE_ENV=development react-scripts start",
+    "start": "REACT_APP_NODE_ENV=development react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "build:test":"cross-env REACT_APP_NODE_ENV=test react-scripts build",
+    "build:test": "cross-env REACT_APP_NODE_ENV=test react-scripts build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -41,6 +44,10 @@
   "devDependencies": {
     "antd": "^4.16.0",
     "node-sass": "^6.0.1",
+    "react-error-overlay": "6.0.9",
     "react-router": "^5.2.1"
+  },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
   }
 }
