--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -20,7 +21,7 @@
     "start": "REACT_APP_NODE_ENV=development react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "build:test": "cross-env REACT_APP_NODE_ENV=test react-scripts build",
+    "build:test": "REACT_APP_NODE_ENV=test react-scripts build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
