关于我们接口对接

--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,4 @@
 REACT_APP_NODE_ENV = 'test'
 REACT_APP_CURRENTMODE = 'test'
 REACT_APP_RESET = 'https://debughodl.first.vip'
-REACT_APP_BASEURL = 'https://debugasset.first.vip/api1'
-REACT_APP_PRE = 1e18
+REACT_APP_BASEURL = 'http://61.test/api'
