--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "react-dom": ">=16.9.0"
   },
   "scripts": {
-    "start": "REACT_APP_NODE_ENV=development react-app-rewired start",
+    "start": "dotenv -e .env.development react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "build:test": "REACT_APP_NODE_ENV=test react-app-rewired build",
+    "build:test": "dotenv -e .env.test react-app-rewired build",
+    "build:master": "dotenv -e .env.master react-app-rewired build",
     "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
