--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-animated-router": "^0.2.4",
     "react-app-rewired": "^2.2.1",
     "react-error-overlay": "6.0.9",
+    "react-player": "^2.10.0",
     "react-router": "^5.2.1",
     "react-transition-group": "^4.4.2",
     "sass-resources-loader": "^2.2.4"
