--- a/.env.test
+++ b/.env.test
@@ -2,4 +2,4 @@ NODE_ENV = 'test'
 REACT_APP_NODE_ENV = 'test'
 REACT_APP_CURRENTMODE = 'test'
 REACT_APP_RESET = 'https://debughodl.first.vip'
-REACT_APP_BASEURL = 'http://207.148.75.139:1000/api'
+REACT_APP_BASEURL = 'http://61.capital/api '
